src/objects/Dol_Batch_Monitor__c.object
<CustomObject>
    <description>Monitor those batches invoked by MuleSoft</description>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOL_Sessoin__c</fullName>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOL_Sessoin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily once</fullName>
                </value>
                <value>
                    <fullName>Daily twice</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Run_Date_Time__c</fullName>
        <label>Last Run Date &amp; Time</label>
        <summarizedField>Dol_Batch_Monitor_Detail__c.Start_Time__c</summarizedField>
        <summaryForeignKey>Dol_Batch_Monitor_Detail__c.Parent_Batch__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Mule System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOL SFT Location</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Error__c</fullName>
        <label>Total Error</label>
        <summaryFilterItems>
            <field>Dol_Batch_Monitor_Detail__c.Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>Dol_Batch_Monitor_Detail__c.Parent_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Execution__c</fullName>
        <label>Total Execution</label>
        <summaryForeignKey>Dol_Batch_Monitor_Detail__c.Parent_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Success__c</fullName>
        <label>Total Success</label>
        <summaryFilterItems>
            <field>Dol_Batch_Monitor_Detail__c.Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>Dol_Batch_Monitor_Detail__c.Parent_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Batch Monitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BatchId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>